--- a/.github/workflows/hello-world-docker-ci.yml
+++ b/.github/workflows/hello-world-docker-ci.yml
@@ -19,4 +19,4 @@ jobs:
           who-to-greet: '@wulfland'
 
       - name: Output time set in the container
-        run: echo "The time was ${{ steps.hello-action.outputs.time }} when the action said hello"
+        run: echo "The time was ${{ steps.hello-action.outputs.time }} when the action said hello, var1 = ${{ steps.hello-action.outputs.var1 }}" 
